<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- xml part to be translated -->
    <string name="app_name">Just Java</string>
    <string name="name_v2">Enter Your Name</string>
    <string name="toppings">toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="minus">-</string>
    <string name="quantity">quantity</string>
    <string name="quantity_number">2</string>
    <string name="plus">+</string>
    <string name="button_order">order</string>

    <!-- java part to be translated -->

    <!-- java toasts-->
    <string name="toast_100_cups">You can not order more than 100 cups</string>
    <string name="toast_1_cups">You have to order at least 1 cup</string>

    <!-- java intents-->
    <string name="extra_subject">"Just Java order for:\u0020 "</string>

    <!-- java order summary text -->
    <string name="order_summary">order summary: </string>
    <!--
    name for the order summary. it will be shown in the format of 'Name: Amy"
    where Amy is the user's name. [CHAR LIMIT=none ]
    -->
    <string name="order_summary_name">Name: <xliff:g example="Amy" id="name_order">%s</xliff:g></string>
    <!--
   Whipped cream topping for the order summary. It will be shown in the format of
   "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
       -->
    <string name="order_summary_whipped_cream">Add whipped cream?\u0020 <xliff:g example="true" id="topping_whipped_cream">\%\b</xliff:g></string>
    <!--
    Chocolate topping for the order summary. It will be shown in the format of
    "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
     -->
    <string name="order_summary_chocolate">Add chocolate?\u0020  <xliff:g example="true" id="topping_chocolate">\%\b</xliff:g></string>
    <!--
     Quantity of coffee cups for the order summary. It will be shown in the format of
     "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
       -->
    <string name="order_summary_quantity">Quantity:\u0020 <xliff:g example="2" id="quantity_order">\%\d</xliff:g></string>
    <!--
    Total price for the order summary. It will be shown in the format of
    "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
     -->
    <string name="order_summary_price">Total:\u0020$ <xliff:g example="$10" id="price_order" />%s</string>

    <string name="order_summary_thank_you">Thank you</string>

</resources>

